--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "fontAwesome"]
 	path = fontAwesome
 	url = https://github.com/FortAwesome/Font-Awesome.git
+[submodule "bootstrap"]
+	path = bootstrap
+	url = https://github.com/twbs/bootstrap.git
